test/pkg010/expected
Uncaught error: user error (wrongopts.ipkg:4:1:
  |
4 | <empty line>
  | ^
Invalid option `-total'

Usage:  ([--nobanner] | [-q|--quiet] | [--ide-mode] | [--ide-mode-socket] |
        [--client ARG] | [--log LEVEL] | [--logging-categories CATS] |
        [--nobasepkgs] | [--noprelude] | [--nobuiltins] | [--check] |
        [-o|--output FILE] | [--interface] | [--typeintype] | [--total] |
        [--partial] | [--warnpartial] | [--warnreach] | [--warnipkg] |
        [--nocoverage] | [--errorcontext] | [--info] | [--listlogcats] |
        [--link] | [--listlibs] | [--libdir] | [--docdir] | [--include] | [--V2]
        | [--V1] | [-V|--V0|--verbose] | [--ibcsubdir FILE] |
        [-i|--idrispath ARG] | [--sourcepath ARG] | [--warn] |
        [-p|--package ARG] | [--port PORT] | [--build IPKG] | [--install IPKG] |
        [--repl IPKG] | [--clean IPKG] | [--mkdoc IPKG] | [--installdoc IPKG] |
        [--checkpkg IPKG] | [--testpkg IPKG] | [--indent-with INDENT] |
        [--indent-clause INDENT] | [--bytecode ARG] | [-S|--codegenonly] |
        [-c|--compileonly] | [--dumpdefuns ARG] | [--dumpcases ARG] |
        [--codegen TARGET] | [--portable-codegen TARGET] | [--cg-opt ARG] |
        [-e|--eval EXPR] | [--execute] | [--exec EXPR] | [-X|--extension EXT] |
        [--O3] | [--O2] | [--O1] | [--O0] | [--partial-eval] |
        [--no-partial-eval] |
        [--optimise-nat-like-types|--optimize-nat-like-types] |
        [--no-optimise-nat-like-types|--no-optimize-nat-like-types] |
        [-O|--level ARG] | [--target TRIPLE] | [--cpu CPU] | [--color|--colour]
        | [--nocolor|--nocolour] | [--consolewidth WIDTH] | [--highlight] |
        [--no-tactic-deprecation-warnings] |
        [--allow-capitalized-pattern-variables]) [FILES] [-v|--version]
)
